--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "Template for quick nodejs/react development",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "setup": "npm install && cd client && npm install",
+    "test": "mocha",
     "start": "node index",
-    "dev": "node hotReloadDev",
-    "build": "npm install && cd client && npm install && npm run build",
-    "heroku-postbuild": "npm run build",
-    "create-env": "printenv > .env"
+    "dev": "npx nodemon index",
+    "build": "npx sequelize db:migrate"
   },
   "repository": {
     "type": "git",
@@ -30,10 +27,14 @@
     "express": "latest",
     "express-session": "^1.17.0",
     "morgan": "^1.10.0",
+    "nunjucks": "^3.2.1",
     "sequelize": "^5.21.5",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "chokidar": "latest"
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
+    "nodemon": "^2.0.2",
+    "sequelize-cli": "^5.5.1"
   }
 }
