--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
+    "request": "^2.88.2",
     "sequelize-cli": "^5.5.1"
   }
 }
