added postgres testing

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,15 +8,6 @@ jobs:
         runs-on: ${{ matrix.os }}
 
         services:
-            mysql:
-                image: mysql:5.7
-                env:
-                    MYSQL_ALLOW_EMPTY_PASSWORD: yes
-                    MYSQL_DATABASE: ci
-                ports:
-                    - 3306
-                options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
             postgres:
                 image: postgres
                 env:
@@ -30,7 +21,7 @@ jobs:
         strategy:
             matrix:
                 node-version: [10.x, 12.x]
-                os: [macos-latest, windows-latest, ubuntu-18.04, ubuntu-latest]
+                os: [ubuntu-16.04, ubuntu-18.04, ubuntu-latest]
         steps:
             - uses: actions/checkout@v2
 
@@ -50,22 +41,12 @@ jobs:
               run: npm ci
 
             - name: Install database-specific packages
-              run: npm install mysql pg pg-native
-
-            - name: Build on mysql
-              run: npm run build
-              env:
-                  SEQUELIZE_URL: mysql://root:@localhost/ci
+              run: npm install pg pg-native
 
             - name: Build on postgres
               run: npm run build
               env:
                   SEQUELIZE_URL: postgres://postgres:postgres@localhost/ci
-
-            - name: Test on mysql
-              run: npm test
-              env:
-                  SEQUELIZE_URL: mysql://root:@localhost/ci
 
             - name: Test on postgres
               run: npm test
