--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,7 +11,11 @@ jobs:
             postgres:
                 image: postgres
                 env:
-                    POSTGRES_PASSWORD: postgres
+                  POSTGRES_USER: postgres
+                  POSTGRES_PASSWORD: postgres
+                  POSTGRES_DB: ci
+                  ports:
+                    - 5432:5432
                 options: >-
                     --health-cmd pg_isready
                     --health-interval 10s
@@ -46,9 +50,9 @@ jobs:
             - name: Build on postgres
               run: npm run build
               env:
-                  SEQUELIZE_URL: postgres://postgres:postgres@localhost/ci
+                  SEQUELIZE_URL: postgres://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/ci
 
             - name: Test on postgres
               run: npm test
               env:
-                  SEQUELIZE_URL: postgres://postgres:postgres@localhost/ci
+                  SEQUELIZE_URL: postgres://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/ci
