--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,7 +7,12 @@ jobs:
     build:
         runs-on: ${{ matrix.os }}
 
+        env:
+            if: ${{ matrix.database == 'postgres' }}
+            SEQUELIZE_URL: postgres://postgres:postgres@localhost:5432/ci
+
         services:
+            if: ${{ matrix.database == 'postgres' }}
             postgres:
                 image: postgres
                 env:
@@ -26,7 +31,8 @@ jobs:
         strategy:
             matrix:
                 node-version: [10.x, 12.x]
-                os: [ubuntu-16.04, ubuntu-18.04, ubuntu-latest]
+                os: [ubuntu-18.04]
+                database: [sqlite, mysql, postgres]
         steps:
             - uses: actions/checkout@v2
 
@@ -50,10 +56,6 @@ jobs:
 
             - name: Build on postgres
               run: npm run build
-              env:
-                  SEQUELIZE_URL: postgres://postgres:postgres@localhost:5432/ci
 
             - name: Test on postgres
               run: npm test
-              env:
-                  SEQUELIZE_URL: postgres://postgres:postgres@localhost:5432/ci
