--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,11 +4,9 @@
 name: Node.js CI
 on: [push, pull_request]
 jobs:
-    build:
+    build-on-postgres:
         runs-on: ${{ matrix.os }}
-
         env:
-            if: ${{ matrix.database == 'postgres' }}
             SEQUELIZE_URL: postgres://postgres:postgres@localhost:5432/ci
 
         services:
@@ -31,14 +29,13 @@ jobs:
             matrix:
                 node-version: [10.x, 12.x]
                 os: [ubuntu-18.04]
-                database: [sqlite, mysql, postgres]
         steps:
             - uses: actions/checkout@v2
 
             - name: Cache node modules
               uses: actions/cache@v1
               env:
-                  cache-name: cache-node-modules
+                  cache-name: cache-node-modules-postgres
               with:
                   path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
                   key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
@@ -53,8 +50,96 @@ jobs:
             - name: Install database-specific packages
               run: npm install pg pg-native
 
-            - name: Build on postgres
+            - name: Build
               run: npm run build
 
-            - name: Test on postgres
+            - name: Test
               run: npm test
+
+    build-on-sqlite:
+        runs-on: ${{ matrix.os }}
+        env:
+            SEQUELIZE_URL: sqlite::./app.db
+
+        strategy:
+            matrix:
+                node-version: [10.x, 12.x]
+                os: [ubuntu-18.04]
+        steps:
+            - uses: actions/checkout@v2
+
+            - name: Cache node modules
+              uses: actions/cache@v1
+              env:
+                  cache-name: cache-node-modules-sqlite
+              with:
+                  path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
+                  key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+                  restore-keys: |
+                      ${{ runner.os }}-build-${{ env.cache-name }}-
+                      ${{ runner.os }}-build-
+                      ${{ runner.os }}-
+
+            - name: Install dependencies
+              run: npm install
+
+            - name: Install database-specific packages
+              run: npm install sqlite3
+
+            - name: Build
+              run: npm run build
+
+            - name: Test
+              run: npm test
+
+    build-on-mysql:
+            runs-on: ${{ matrix.os }}
+            env:
+                SEQUELIZE_URL: mysql://root:password@localhost:3306/ci
+
+            services:
+                mysql:
+                    image: mysql:5.7
+                    env:
+                        MYSQL_ALLOW_EMPTY_PASSWORD: yes
+                        MYSQL_DATABASE: ci
+                        MYSQL_ROOT_PASSWORD: password
+                    options: >-
+                        --health-cmd="mysqladmin ping"
+                      --health-interval=10s
+                      --health-timeout=5s
+                      --health-retries=3
+                    ports:
+                        # Maps tcp port 5432 on service container to the host
+                        - 3306:3306
+
+            strategy:
+                matrix:
+                    node-version: [10.x, 12.x]
+                    os: [ubuntu-18.04]
+            steps:
+                - uses: actions/checkout@v2
+
+                - name: Cache node modules
+                  uses: actions/cache@v1
+                  env:
+                      cache-name: cache-node-modules-mysql
+                  with:
+                      path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
+                      key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+                      restore-keys: |
+                          ${{ runner.os }}-build-${{ env.cache-name }}-
+                          ${{ runner.os }}-build-
+                          ${{ runner.os }}-
+
+                - name: Install dependencies
+                  run: npm install
+
+                - name: Install database-specific packages
+                  run: npm install mysql2
+
+                - name: Build
+                  run: npm run build
+
+                - name: Test
+                  run: npm test
