--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"dotenv": "latest",
 		"express": "latest",
 		"express-session": "^1.17.1",
+		"honeybadger": "^1.4.0",
 		"morgan": "^1.10.0",
 		"sequelize": "^6.3.1",
 		"sqlite3": "^4.2.0"
