added graphql to dependency list

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"dotenv": "latest",
 		"express": "latest",
 		"express-session": "^1.17.1",
+		"graphql": "^15.5.0",
 		"honeybadger": "^1.4.0",
 		"morgan": "^1.10.0",
 		"sequelize": "^6.3.5",
