--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 		"graphql": "^16.3.0",
 		"honeybadger": "^1.4.1",
 		"morgan": "^1.10.0",
-		"sqlite3": "^5.0.2",
-		"sequelize": "^6.14.1"
+		"sequelize": "^6.14.1",
+		"sqlite3": "^4.2.0"
 	},
 	"devDependencies": {
 		"chai": "^4.3.6",
