--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,26 +1,26 @@
 version: 2
 updates:
-- package-ecosystem: npm
-  directory: "/"
-  schedule:
-    interval: daily
-    time: "10:00"
-  open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: apollo-server-express
-    versions:
-    - 2.20.0
-    - 2.21.1
-    - 2.21.2
-    - 2.22.1
-  - dependency-name: sequelize
-    versions:
-    - 6.5.1
-    - 6.6.1
-  - dependency-name: mocha
-    versions:
-    - 8.3.1
-  - dependency-name: chai
-    versions:
-    - 4.3.0
-    - 4.3.3
+  - package-ecosystem: npm
+    directory: '/'
+    schedule:
+      interval: daily
+      time: '10:00'
+    open-pull-requests-limit: 10
+    ignore:
+      - dependency-name: apollo-server-express
+        versions:
+          - 2.20.0
+          - 2.21.1
+          - 2.21.2
+          - 2.22.1
+      - dependency-name: sequelize
+        versions:
+          - 6.5.1
+          - 6.6.1
+      - dependency-name: mocha
+        versions:
+          - 8.3.1
+      - dependency-name: chai
+        versions:
+          - 4.3.0
+          - 4.3.3
