--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "npx prettier --write ."
   },
   "dependencies": {
+    "@types/umzug": "^2.3.3",
     "apollo-server-express": "^3.6.3",
     "body-parser": "latest",
     "connect-session-sequelize": "^7.1.2",
@@ -20,18 +21,24 @@
     "express": "latest",
     "express-session": "^1.17.2",
     "graphql": "^16.3.0",
-    "honeybadger": "^1.4.1",
+    "graphql-scalars": "^1.14.1",
     "morgan": "^1.10.0",
     "sequelize": "^6.16.1",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "ts-node": "^10.5.0",
+    "umzug": "^3.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/mocha": "^9.1.0",
+    "@types/morgan": "^1.9.3",
     "chai": "^4.3.6",
     "mocha": "^9.2.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "request": "^2.88.2",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "typescript": "^4.5.5"
   },
   "prettier": {
     "semi": true,
