--- a/package.json
+++ b/package.json
@@ -5,17 +5,15 @@
   "author": "Abir Taheer",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "start": "node index",
+    "test": "mocha --require ts-node/register src/**/*.spec.ts",
+    "start": "node dist/index.js",
     "dev": "npx nodemon index",
-    "build": "npx sequelize db:migrate",
+    "build": "tsc",
     "prettier": "npx prettier --write ."
   },
   "dependencies": {
-    "@types/umzug": "^2.3.3",
     "apollo-server-express": "^3.6.3",
     "body-parser": "latest",
-    "connect-session-sequelize": "^7.1.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "latest",
     "express": "latest",
@@ -32,12 +30,11 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/mocha": "^9.1.0",
     "@types/morgan": "^1.9.3",
+    "@types/umzug": "^2.3.3",
     "chai": "^4.3.6",
     "mocha": "^9.2.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
-    "request": "^2.88.2",
-    "sequelize-cli": "^6.4.1",
     "typescript": "^4.5.5"
   },
   "prettier": {
