--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mocha --require ts-node/register src/**/*.spec.ts",
     "start": "node dist/index.js",
     "dev": "npx nodemon index",
-    "build": "tsc",
+    "build": "tsc && node dist/migrate",
     "prettier": "npx prettier --write ."
   },
   "dependencies": {
