--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "graphql-scalars": "^1.14.1",
     "morgan": "^1.10.0",
     "sequelize": "^6.16.2",
-    "sqlite3": "^5.0.2",
     "ts-node": "^10.5.0",
     "umzug": "^3.0.0"
   },
@@ -31,6 +30,7 @@
     "@types/mocha": "^9.1.0",
     "@types/morgan": "^1.9.3",
     "@types/umzug": "^2.3.3",
+    "@vscode/sqlite3": "^5.0.7",
     "chai": "^4.3.6",
     "mocha": "^9.2.1",
     "nodemon": "^2.0.15",
