--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "npx nyc mocha --require ts-node/register src/**/*.spec.ts",
     "start": "node dist/index.js",
-    "dev": "npx nodemon index",
+    "dev": "npx nodemon src/index.ts",
     "cleanup": "rimraf dist",
     "build": "npm run cleanup && tsc && node dist/migrate",
     "prettier": "npx prettier --write ."
@@ -25,7 +25,6 @@
     "morgan": "^1.10.0",
     "rimraf": "^3.0.2",
     "sequelize": "^6.17.0",
-    "ts-node": "^10.7.0",
     "umzug": "^3.0.0"
   },
   "devDependencies": {
@@ -40,6 +39,7 @@
     "nyc": "^15.1.0",
     "prettier": "^2.6.0",
     "sqlite3": "npm:@vscode/sqlite3@^5.0.7",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.5"
   },
   "prettier": {
